# FlatDD

./: .gitignore  CMakeLists.txt  README.md  cache.sh  convert.sh  fuse.sh  plot-cache.py  run.sh  scala.sh  scalability.sh  time-per-gate.py
apps/: CMakeLists.txt  DDSIM.cpp  FlatDD.cpp
circuits/: dnn_n20.qasm  dnn_n25.qasm  supremacy_n20.qasm  supremacy_n24.qasm  supremacy_n26.qasm
include/: DDSimulator.hpp  QuantumComputation.hpp  SwitchSimulator.hpp
include/dd/: DDpackageConfig.hpp  DMAVTable.hpp  Operations.hpp  Package.hpp  SwitchPackage.hpp
include/dd/kernel/: CMakeLists.txt  kernel.cu  kernel.cuh
log/: .gitignore
qpp/: .gitignore  CMakeLists.txt  run.sh
qpp/UNKNOWN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
qpp/examples/qasm/: qpp_qasm.cpp
qpp/include/: operations.hpp
qpp/include/classes/circuits/: engines.hpp
qpp/include/internal/: util.hpp
qpp/workspace/: example.py
src/: CMakeLists.txt  DDSimulator.cpp  SwitchSimulator.cpp
src/dd/: CMakeLists.txt
